[project]
name = "openaidemo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.5",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "openai>=1.106.1",
    "pandas>=2.3.2",
]
